[package]
name = "prototype4"
version = "0.1.0"
authors = ["KJH <wogudwkd1233@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = { git = "https://github.com/MegasKomnenos/legion" }
rayon = "1.3.1"
num_cpus = "1.13.0"
rand = "0.7.3"